--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -405,7 +405,8 @@
 
 <!-- 사용자별 스크립트 작성 -->
 <th:block layout:fragment="customJsCode">
-    <script th:inline="javascript">
+
+    <script>
 
 
         //가족 구성원 모으는 함수
