2/7 - 구글 로그인 적용 - 호칭 검색 후 구성원 추가 적용

--- a/src/main/resources/templates/admin/addFamilyTitle.html
+++ b/src/main/resources/templates/admin/addFamilyTitle.html
@@ -41,9 +41,9 @@
         <div class="mainContents col-lg-6">
 
             <button class="modalOpenBtn btn btn-lg btn-primary font-weight-bold" data-bs-toggle="modal"
-                    data-bs-target="#modal">가족 호칭 추가asdf
-            </button><d<dasf>   </dasf></dasf>
-a
+                    data-bs-target="#modal">가족 호칭 추가
+            </button>
+
             <div class="mt-lg-5">
                 <table class="table table-sm table-bordered">
                     <thead class="table-secondary">
@@ -208,7 +208,6 @@ a
                     {gender: '1', name: '남동생'},
                     {gender: '2', name: '여동생'}
                 ]
-
             },
             femail: {
                 up: [
