--- a/src/main/resources/templates/user/layout/default.html
+++ b/src/main/resources/templates/user/layout/default.html
@@ -65,10 +65,10 @@
   if(currentPath === '/' || currentPath ==='') {
     $('#headerNav').children('.nav-item:nth-child(1)').addClass('active');
   } else if (currentPath === '/admin/addFamilyTitle') {
-    $('#headerNav').children('.nav-item:nth-child(2)').addClass('active');
+    $('#headerNav').children('.nav-item:nth-child(4)').addClass('active');
   }else if (currentPath === '/user/titleList') {
     $('#headerNav').children('.nav-item:nth-child(3)').addClass('active');
-  }else if (currentPath === '/user/familyGroup') {
+  }else if (currentPath === '/user/myFamily') {
     $('#headerNav').children('.nav-item:nth-child(2)').addClass('active');
   }
 
