--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -6,38 +6,27 @@
 
   </div>
 
-  <div class="collapse navbar-collapse col-lg-6 container" id="navbarColor01">
+  <div class="collapse navbar-collapse col-lg-5 container" id="navbarColor01">
     <a class="navbar-brand font-weight-bold" th:href="@{/}" style="font-size: 30px;" >FamilyTitle</a>
     <ul class="navbar-nav" id="headerNav">
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/}">home
+        <a class="nav-link" th:href="@{/}">Home
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/user/familyGroup}">FamilyGroup</a>
+        <a class="nav-link" th:href="@{/user/myFamily}">MyFamily</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{/user/titleList}">TitleList</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu">
-<!--          <li class="nav-item">-->
-<!--            <a class="nav-link" th:href="@{/admin/addFamilyTitle}">호칭 추가</a>-->
-<!--          </li>-->
-          <a class="dropdown-item" th:href="@{/admin/addFamilyTitle}">호칭 추가</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
-        </div>
+      <li class="nav-item" th:if="${session.SID == 'tkdals5022@gmail.com'}">
+        <a class="nav-link" th:href="@{/admin/addFamilyTitle}">AddTitle</a>
       </li>
     </ul>
-
-    <button type="button" class="btn btn-lg rounded-pill btn-success font-weight-bold">login</button>
-
+      <a th:if="${session.SID  == null}" href="/login/oauth2/code" class="btn btn-lg rounded-pill btn-success font-weight-bold">Login</a>
+      <a th:unless="${session.SID  == null}" href="/login/oauth2/logout" class="btn btn-lg rounded-pill btn-danger font-weight-bold">Logout</a>
   </div>
-  <div class="col-lg-3">
+  <div class="col-lg-4">
 
   </div>
 </nav>
