2/8 - 프로필 사진 수정, 구성원 삭제 시 기존파일 삭제되되도록. - 템플릿 수정. - 만 나이 계산 오류 수정.

--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -9,8 +9,8 @@
         <ul>
           <li><span><b>SideProject : </b> FamilyTitle (2023.12.31 ~ . . .)</span></li>
           <li><span><b>Email : </b> eaea8@naver.com</span></li>
-          <li><span><b>GitHub : </b> https://github.com/SangMin2758/family_title.git </span></li>
-          <li><span><b>Blog : </b> eaea8@naver.com</span></li>
+          <li><span><b>GitHub : </b> <a href="https://github.com/SangMin2758/family_title.git">https://github.com/SangMin2758/family_title.git</a> </span></li>
+          <li><span><b>Blog : </b> <a href="https://velog.io/@eaea8/posts">https://velog.io/@eaea8/posts</a></span></li>
         </ul>
       </div>
       <div class="col-lg-3"></div>
