--- a/src/main/resources/templates/user/titleList.html
+++ b/src/main/resources/templates/user/titleList.html
@@ -40,7 +40,7 @@
 
 <!--/* layout:decorate : 파일에서 사용자 정의로 선언한 조각에 작성한 html 코드 삽입 */-->
 <th:block layout:fragment="customContents">
-    <div class="row" style="height: 1000px">
+    <div class="row" >
         <div class="col-lg-3"></div>
         <div class="mainContents col-lg-6">
 
